--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <nav>
     <img src="img/Nucleon_Logo_White.png" alt=""/>
     <ul>
-      <li><a href="#">HOME</a></li>
-      <li><a href="plans.html">PLANS</a></li>
-      <li><a href="preview.html">PREVIEW</a></li>
-      <li><a href="#">GET IN TOUCH</a></li>
+      <li><a Id="navhome" href="#">HOME</a></li>
+      <li><a Id="navplans" href="plans.html">PLANS</a></li>
+      <li><a Id="navpreview" href="preview.html">PREVIEW</a></li>
+      <li><a Id="navcontact" href="#">GET IN TOUCH</a></li>
     </ul>
   </nav>
     <div class="hero">
