--- a/plans.html
+++ b/plans.html
@@ -15,17 +15,19 @@
   <nav>
     <img src="img/Nucleon_Logo_White.png" alt=""/>
     <ul>
-      <li><a href="index.html">HOME</a></li>
-      <li><a href="#">PLANS</a></li>
-      <li><a href="preview.html">PREVIEW</a></li>
-      <li><a href="#">GET IN TOUCH</a></li>
+      <li><a Id="navhome" href="index.html">HOME</a></li>
+      <li><a Id="navplans" href="#">PLANS</a></li>
+      <li><a Id="navpreview" href="preview.html">PREVIEW</a></li>
+      <li><a Id="navcontact" href="#">GET IN TOUCH</a></li>
     </ul>
   </nav>
+  <br>
     <div class="container" style="margin-top: 0px;">
-      <img src="img/planaction.jpg" alt="" />
+      <img src="img/plan.png" alt="" />
     </div>
     <div class="container">
       <h1 style="text-align:center">CHOOSE THE PLAN THATS RIGHT FOR YOU</h1>
+      <p style="text-align:center; font-size:15px;">Our plans have been created to meet your needs, and your pocket. Upgrade your plans confidently whenever you want!</p>
       <br>
       <div class="col33 paddright2">
         <ul class="ulmaster">
