--- a/preview.html
+++ b/preview.html
@@ -15,14 +15,15 @@
   <nav>
     <img src="img/Nucleon_Logo_White.png" alt=""/>
     <ul>
-      <li><a href="index.html">HOME</a></li>
-      <li><a href="plans.html">PLANS</a></li>
-      <li><a href="#">PREVIEW</a></li>
-      <li><a href="#">GET IN TOUCH</a></li>
+      <li><a Id="navhome" href="index.html">HOME</a></li>
+      <li><a Id="navplans" href="plans.html">PLANS</a></li>
+      <li><a Id="navpreview" href="#">PREVIEW</a></li>
+      <li><a Id="navcontact" href="#">GET IN TOUCH</a></li>
     </ul>
   </nav>
+  <br>
     <div class="container" style="margin-top: 0px;">
-      <img src="img/preview1.jpg" alt="" />
+      <img src="img/preview.png" alt="" />
     </div>
     <div class="container" style="text-align:center">
       <h1>PREVIEW</h1>
