--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Preview | NucleonBytes</title>
+  <title>Contact | NucleonBytes</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="containers.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,21 +17,26 @@
     <ul>
       <li><a Id="navhome" href="index.html">HOME</a></li>
       <li><a Id="navplans" href="plans.html">PLANS</a></li>
-      <li><a Id="navpreview" href="#">PREVIEW</a></li>
-      <li><a Id="navcontact" href="contact.html">GET IN TOUCH</a></li>
+      <li><a Id="navpreview" href="preview.html">PREVIEW</a></li>
+      <li><a Id="navcontact" href="#">GET IN TOUCH</a></li>
     </ul>
   </nav>
   <br>
     <div class="container" style="margin-top: 0px;">
-      <img src="img/preview.png" alt="" />
+      <img class="center" src="img/Nucleon_Text_Logo.png" alt="" />
     </div>
-    <div class="container" style="text-align:center">
-      <h1>PREVIEW</h1>
-      <p>Have you been given an access key? Enter it below to see the site live in development</p>
-      <br>
-      <input class="superinput" Id="InputPrevCode" type="password" name="accesskey">
-      <button Id="smartbtn" type="button" name="button" onClick="findm(document.getElementById('InputPrevCode').value)">Find</button>
-      <br>
+    <br>
+    <br>
+    <br>
+    <div class="container">
+      <div class="joinbox">
+        <a href="mailto:nucleonbytes@gmail.com"><i class="material-icons">record_voice_over</i></a>
+        <br>
+        <h1>INTERESTED? GET IN TOUCH</h1>
+        <p>Are you looking for a high quality, reviewed website design? Not sure about pricing? Why dont you get in touch with us?</p>
+        <p>(<a href="mailto:Nucleonbytes@gmail.com">nucleonbytes@gmail.com</a>)</p>
+        <br>
+      </div>
     </div>
     <br>
   <footer>
