--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <li><a Id="navhome" href="#">HOME</a></li>
       <li><a Id="navplans" href="plans.html">PLANS</a></li>
       <li><a Id="navpreview" href="preview.html">PREVIEW</a></li>
-      <li><a Id="navcontact" href="#">GET IN TOUCH</a></li>
+      <li><a Id="navcontact" href="contact.html">GET IN TOUCH</a></li>
     </ul>
   </nav>
     <div class="hero">
@@ -26,13 +26,13 @@
       <h1>NUCLEON BYTES</h1>
     </div>
     <div class="container">
-      <div class="col50 floatleft">
+      <div class="col50 paddright2">
         <h1>WHAT WE DO</h1>
         <p>
         We create affordable, manageable and purchasable front-end websites. We design, plan and create your website from our own library of templates which you can choose from. Tailor-made templates are also available for an affordable price.
         </p>
       </div>
-      <div class="col50 floatright">
+      <div class="col50">
         <h1>CUSTOM TOOLS?</h1>
         <p>
           We also accept requests for websites to be made using online tools and platforms such as; Wordpress, Blogger, Weebly and more. If you have a tool you would like us to use, or simply want more information about the tools we use, contact us.
