--- a/plans.html
+++ b/plans.html
@@ -18,7 +18,7 @@
       <li><a Id="navhome" href="index.html">HOME</a></li>
       <li><a Id="navplans" href="#">PLANS</a></li>
       <li><a Id="navpreview" href="preview.html">PREVIEW</a></li>
-      <li><a Id="navcontact" href="#">GET IN TOUCH</a></li>
+      <li><a Id="navcontact" href="contact.html">GET IN TOUCH</a></li>
     </ul>
   </nav>
   <br>
@@ -64,8 +64,45 @@
       </div>
     </div>
     <div class="container">
-      <h1>STILL NOT SURE?</h1>
-      <p>Are you still unsure about which plan will meet your needs? Get in touch with us!</p>
+      <h1 style="text-align:center">FREQUENTLY ASKED QUESTIONS</h1>
+      <br>
+      <br>
+      <div class="col50 paddright2">
+        <h2>What do you mean by assets?</h2>
+        <p>
+          In order to properly design and develop your website, we will ask you for assets to put on the website. These can be anything from Videos, Images and texts, as long as they are yours or you have the appropriate rights to use them. For an additional cost, we can provide you with professional assets.
+        </p>
+      </div>
+      <div class="col50">
+        <h2>Will i be able to see the website in progress?</h2>
+        <p>
+          Yes! Once we start development, you will receive an email with your preview key which you can enter in the NucleonBytes website to preview your website.
+        </p>
+      </div>
+      <div class="col50 paddright2">
+        <h2>Can you create my website using wordpress?</h2>
+        <p>
+          Sure! We are able to develop with a bunch of third-party tools like WordPress and others like it.
+        </p>
+      </div>
+      <div class="col50">
+        <h2>How long will it take for my website to be complete?</h2>
+        <p>
+          We try our best to keep development time as short as possible to save you money and time, so it can take around 3 weeks depending on how many pages need to be created and the complexity of your website.
+        </p>
+      </div>
+      <div class="col50 paddright2">
+        <h2>How do you measure the rate?</h2>
+        <p>
+          Our rates depend on the time of year, space required for site, number of pages, plugins required, site design and number of developers required. We will send you a breakdown of your charge before you even sign the agreement.
+        </p>
+      </div>
+      <div class="col50">
+        <h2>Do you offer student/startup rates?</h2>
+        <p>
+          Yes. During the design consultation, we will evaluate your needs and purpose to see if you meet our requirements for lower pricing.
+        </p>
+      </div>
     </div>
     <br>
   <footer>
