--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <title>Contact | NucleonBytes</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="containers.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
   <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
   <script src="script.js"></script>
