--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container">
       <h1>IN A NUTSHELL... </h1>
       <p>
-        We will plan, design and create your website for you using our set of libraries and tools as well as third party awesomeness. We try our best to deliver at least a prototype of the website within 14 days and our pricing is uber, super flexible. Oh and we also keep it simple :)
+        We will plan, design and create your responsive (mobile-ready) website for you using our set of libraries and tools as well as third party awesomeness. We try our best to deliver at least a prototype of the website within 14 days and our pricing is uber, super flexible. Oh and we also keep it simple :)
       </p>
     </div>
     <div class="container">
