--- a/contact.html
+++ b/contact.html
@@ -30,11 +30,15 @@
     <br>
     <div class="container">
       <div class="joinbox">
-        <a href="mailto:nucleonbytes@gmail.com"><i class="material-icons">record_voice_over</i></a>
         <br>
         <h1>INTERESTED? GET IN TOUCH</h1>
         <p>Are you looking for a high quality, reviewed website design? Not sure about pricing? Why dont you get in touch with us?</p>
-        <p>(<a href="mailto:Nucleonbytes@gmail.com">nucleonbytes@gmail.com</a>)</p>
+        <br>
+        <form action="//formspree.io/nucleonbytes@gmail.com" method="POST">
+          <input class="superinput smartwidth" type="text" placeholder="your question" name="name">
+          <input class="superinput smartwidth" type="email" placeholder="your email" name="_replyto">
+          <input Id="smartbtn" class="smartpadd" type="submit" value="Send">
+        </form>
         <br>
       </div>
     </div>
