--- a/contact.html
+++ b/contact.html
@@ -32,12 +32,15 @@
       <div class="joinbox">
         <br>
         <h1>INTERESTED? GET IN TOUCH</h1>
-        <p>Are you looking for a high quality, reviewed website design? Not sure about pricing? Why dont you get in touch with us?</p>
+        <p>Got a question? Pop it in below and we will get back to you as soon as we can!</p>
         <br>
         <form action="//formspree.io/nucleonbytes@gmail.com" method="POST">
-          <input class="superinput smartwidth" type="text" placeholder="your question" name="name">
-          <input class="superinput smartwidth" type="email" placeholder="your email" name="_replyto">
-          <input Id="smartbtn" class="smartpadd" type="submit" value="Send">
+          <input class="superinput smartwidth" type="text" placeholder="your question" name="question"/>
+          <input class="superinput smartwidth" type="email" placeholder="your email" name="_replyto"/>
+          <input type="hidden" name="_next" value="//nucleonbytes.github.io/index.html"/>
+          <input type="text" name="_gotcha" style="display:none" />
+          <input type="hidden" name="_subject" value="New question!" />
+          <input Id="smartbtn" class="smartpadd" type="submit" value="Send"/>
         </form>
         <br>
       </div>
