--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
       <div class="joinbox">
         <br>
         <h1>INTERESTED? GET IN TOUCH</h1>
-        <p>Got a question? Pop it in below and we will get back to you as soon as we can!</p>
+        <p>Got a question? Getting in touch is simple. Simply enter your question and your email address, and we will get in touch with a reply! You can also use the form below to request a review/consultation :)</p>
         <br>
         <form action="//formspree.io/nucleonbytes@gmail.com" method="POST">
           <input class="superinput smartwidth" type="text" placeholder="your question" name="question"/>
