--- a/plans.html
+++ b/plans.html
@@ -64,6 +64,15 @@
       </div>
     </div>
     <div class="container">
+      <p>
+        Are you a student, or startup? Have a look at our Xplans <a href="xplans.html">here</a>!
+      </p>
+    </div>
+    <br>
+    <div class="container">
+      <hr>
+    </div>
+    <div class="container">
       <h1 style="text-align:center">FREQUENTLY ASKED QUESTIONS</h1>
       <br>
       <br>
