--- a/plans.html
+++ b/plans.html
@@ -109,9 +109,16 @@
       <div class="col50">
         <h2>Do you offer student/startup rates?</h2>
         <p>
-          Yes. During the design consultation, we will evaluate your needs and purpose to see if you meet our requirements for lower pricing.
+          Yes. We have a set of plans for students, educators, and startups. During the design consultation, we will evaluate your needs and purpose to see if you meet our requirements for lower pricing.
         </p>
       </div>
+      <div class="col50 paddright2">
+        <h2>What do i need for the consultation?</h2>
+        <p>
+          For the consultation, just have a rough idea for the design and interactions of your webpage. If you dont have a clue about what it should look or work like, dont worry. We will work together with you to agree on a design!
+        </p>
+      </div>
+      
     </div>
     <br>
   <footer>
