--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <ul>
       <li><a Id="navhome" href="#">HOME</a></li>
       <li><a Id="navplans" href="plans.html">PLANS</a></li>
+      <li><a Id="navfeatures" href="features.html">FEATURES</a></li>
       <li><a Id="navpreview" href="preview.html">PREVIEW</a></li>
       <li><a Id="navcontact" href="contact.html">GET IN TOUCH</a></li>
     </ul>
