--- a/preview.html
+++ b/preview.html
@@ -17,13 +17,14 @@
     <ul>
       <li><a Id="navhome" href="index.html">HOME</a></li>
       <li><a Id="navplans" href="plans.html">PLANS</a></li>
+      <li><a Id="navfeatures" href="features.html">FEATURES</a></li>
       <li><a Id="navpreview" href="#">PREVIEW</a></li>
       <li><a Id="navcontact" href="contact.html">GET IN TOUCH</a></li>
     </ul>
   </nav>
   <br>
     <div class="container" style="margin-top: 0px;">
-      <img src="img/preview.png" alt="" />
+      <img class="cent" src="img/preview.png" alt="" />
     </div>
     <div class="container" style="text-align:center">
       <h1>PREVIEW</h1>
