--- a/plans.html
+++ b/plans.html
@@ -17,13 +17,14 @@
     <ul>
       <li><a Id="navhome" href="index.html">HOME</a></li>
       <li><a Id="navplans" href="#">PLANS</a></li>
+      <li><a Id="navfeatures" href="features.html">FEATURES</a></li>
       <li><a Id="navpreview" href="preview.html">PREVIEW</a></li>
       <li><a Id="navcontact" href="contact.html">GET IN TOUCH</a></li>
     </ul>
   </nav>
   <br>
     <div class="container" style="margin-top: 0px;">
-      <img src="img/plan.png" alt="" />
+      <img class="cent" src="img/plan.png" alt="" />
     </div>
     <div class="container">
       <h1 style="text-align:center">CHOOSE THE PLAN THATS RIGHT FOR YOU</h1>
@@ -65,7 +66,7 @@
     </div>
     <div class="container">
       <p>
-        Are you a student, or startup? Have a look at our Xplans <a href="xplans.html">here</a>!
+        Are you a student, or startup? Have a look at our xPlans <a href="xplans.html">here</a>!
       </p>
     </div>
     <br>
@@ -118,7 +119,7 @@
           For the consultation, just have a rough idea for the design and interactions of your webpage. If you dont have a clue about what it should look or work like, dont worry. We will work together with you to agree on a design!
         </p>
       </div>
-      
+
     </div>
     <br>
   <footer>
