--- a/xplans.html
+++ b/xplans.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Xplans | NucleonBytes</title>
+  <title>xPlans | NucleonBytes</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="containers.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -17,13 +17,14 @@
     <ul>
       <li><a Id="navhome" href="index.html">HOME</a></li>
       <li><a Id="navplans" href="plans.html">PLANS</a></li>
+      <li><a Id="navfeatures" href="features.html">FEATURES</a></li>
       <li><a Id="navpreview" href="preview.html">PREVIEW</a></li>
       <li><a Id="navcontact" href="contact.html">GET IN TOUCH</a></li>
     </ul>
   </nav>
   <br>
     <div class="container" style="margin-top: 0px;">
-      <img src="img/student.png" alt="" />
+      <img class="cent" src="img/student.png" alt="" />
     </div>
     <div class="container">
       <h1 style="text-align:center">XPLAN, HERE TO SERVE STARTUPS AND STUDENTS</h1>
