--- a/features.html
+++ b/features.html
@@ -37,7 +37,7 @@
         <h1 style="color:#399dde">Unique</h1>
         <br>
         <p class="bigp">
-          Unlike some web-development and design agencies, we take pride in our work. We ensure that our client's needs are met promptly, with effeciency and individuality. Unless otherwise stated by our clients, every website we create is written completely from scratch, using our very own set of libraries and tools.
+          Unlike some web-development and design agencies, we take pride in our work. We ensure that our client's needs are met promptly, with efficiency and individuality. Unless otherwise stated by our clients, every website we create is written completely from scratch, using our very own set of libraries and tools.
         </p>
         <br>
         <hr>
@@ -46,7 +46,7 @@
         <h1 style="color:#ff4a4a">Open Source</h1>
         <br>
         <p class="bigp">
-          Because of the countless plugins and scripts available in the open-source community, we have been able to create and improve our skills as well as our clients' and partners' products. We love to contribute too! The libraries we use to make our client's products so super-duper awesome are all hosted on Github, available for anyone to use and improve.
+          Because of the countless plugins and scripts available in the open-source community, we have been able to create and improve our skills as well as our clients' and partners' products. We love to contribute too! The libraries we use to make our clients' products so super-duper awesome are all hosted on Github, available for anyone to use and improve.
         </p>
         <br>
         <hr>
@@ -66,6 +66,16 @@
         <p class="bigp">
           We believe that time is money. Wasted time means money lost on a potentially good idea. That's why we promise to deliver a prototype within 2 weeks of development. That is also why we simply dont wireframe; wireframing is time we could be using to create an interactive prototype for our valuable clients.
         </p>
+    </div>
+    <br>
+    <div style="text-align:center" class="container">
+      <hr>
+      <br>
+      <h1>ANOTHER REASON WE ARE SO FAST AND EFFECTIVE</h1>
+      <br>
+      <h1><i class="material-icons">extension</i></h1>
+      <br>
+      <p class="bigp">We have invested a lot of time into making our own development tools so that developing for our client was fast, effective and above all, productive. Our prefered sets of IDEs are Sublime, Atom, and Tizen8. Tizen8 is our web-powered development tool created using open source plugins, to help us develop state of the arts websites and web-applications.</p>
     </div>
     <br>
   <footer>
