--- a/dev/Nitro/docs.html
+++ b/dev/Nitro/docs.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>NitroJS</title>
+	<title>NitroJS | Docs</title>
 	<link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="containers.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -12,24 +12,20 @@
 	<nav>
 		<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="#">Get it</a></li>
-			<li><a href="docs.html">Documentation</a></li>
+			<li><a href="get.html">Get it</a></li>
+			<li><a href="#">Documentation</a></li>
 		</ul>
 	</nav>
 	<div class="blockfill"></div>
-	<div class="blockfill"></div>
-	<div class="blockfill"></div>
-	<div class="container-mid">
-		<h1 class="roundtxt">Nitro<span style="color:#1FBFBF">JS</span> <span style="color:#cc3333">//Download</span></h1>
+	<div class="container-mid cop-blue">
+		<div class="blockfill"></div>
+		<h1 class="roundtxt"><span style="color:#4D4D4D">Nitro</span>JS <span style="color:#cc3333">//Docs</span></h1>
 		<br>
-		<p class="mid">Stay up to date with the latest bug fixes!</p>
+		<p class="mid">Lets get started!</p>
+		<div class="blockfill"></div>
 	</div>
 	<br>
 	
-	<div class="blockfill"></div>
-	<div class="container">
-		<a class="button" href="index.html">DOWNLOAD</a>
-	</div>
 	
 	<div class="blockfill"></div>
 	<div class="blockfill"></div>
