--- a/dev/Nitro/index.html
+++ b/dev/Nitro/index.html
@@ -13,7 +13,7 @@
 		<ul>
 			<li><a href="#">Home</a></li>
 			<li><a href="get.html">Get it</a></li>
-			<li><a href="docs,html">Documentation</a></li>
+			<li><a href="docs.html">Documentation</a></li>
 		</ul>
 	</nav>
 	<div class="blockfill"></div>
