--- a/dev/Nitro/docs.html
+++ b/dev/Nitro/docs.html
@@ -19,7 +19,7 @@
 	<div class="blockfill"></div>
 	<div class="container-mid cop-blue">
 		<div class="blockfill"></div>
-		<h1 class="roundtxt"><span style="color:#4D4D4D">Nitro</span>JS <span style="color:#cc3333">//Docs</span></h1>
+		<h1 class="roundtxt"><span style="color:#1D1D1D">Nitro</span>JS <span style="color:#cc3333">//Docs</span></h1>
 		<br>
 		<p class="mid">Lets get started!</p>
 		<div class="blockfill"></div>
@@ -27,24 +27,22 @@
 	<br>
 	
 	
-	<div class="blockfill"></div>
-	<div class="blockfill"></div>
 	
 	<div class="container lefty">
-		<h1>FAQ <span style="color:#1FBFBF">//How often are bug patches uploaded?</span></h1>
-		<p>We aim to push bug fixes as soon as we patch bugs to reduce the chances of vulnerabilities.</p>
+		<h1>API <span style="color:#1FBFBF">//permissions</span></h1>
+		<p>In order to make sure that your user stays safe when using your application, we have created permissions. The first time your user runs your application, they will be asked to confirm the permissions you set in your manifest. Permissions are required in order to access things like storage, files, and computer information.</p>
 		<br>
-		<h1>FAQ <span style="color:#1FBFBF">//How often should i check this page for updates?</span></h1>
-		<p>Until we reach the milestone at v2, we highly recommend checking this page at least every two weeks. Once we reach v2, updates will be automatic for both client and developer.</p>
+		<h1>API <span style="color:#1FBFBF">//On-the-fly linking</span></h1>
+		<p>a bit about this api.</p>
 		<br>
-		<h1>FAQ <span style="color:#1FBFBF">//Will future updates break current API?</span></h1>
-		<p>We aim to make updates backward compatible, however, in some cases it may not be possible to keep backwards compatibility with older API (e.g. security) If this happens, application made with versioning API will be automatically converted to latest API.</p>
+		<h1>API <span style="color:#1FBFBF">//apps block</span></h1>
+		<p>a bit about this api</p>
 		<br>
-		<h1>FAQ <span style="color:#1FBFBF">//How do i enable API versioning?</span></h1>
-		<p>To enable versioning to force backwards compatibility, set runtime>version in the manifest to the API version you want to force. Note: we do not recommend forcing backwards compatibility as it may void some security updates.</p>
+		<h1>API <span style="color:#1FBFBF">//storage block</span></h1>
+		<p>a bit about this api</p>
 		<br>
-		<h1>FAQ <span style="color:#1FBFBF">//Why wont my app render?</span></h1>
-		<p>If you have broken code which could potentially break your whole app or cause security issues, NitrixCore will not render your app. To fix this, make sure there are no errors in your syntax.</p>
+		<h1>MANIFEST <span style="color:#1FBFBF">//setting up</span></h1>
+		<p>a bit about setting up manifest and what manifest is</p>
 	</div>
 	
 	<footer>
